[package]
name = "generational-arena-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.generational-arena]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "chaos"
path = "fuzz_targets/chaos.rs"
test = false
doc = false

[profile.release]
debug = true
